@@ -1,7 +1,12 @@
 ENMeval 2.0.5
 ===========
 o  Updated to use terra and predicts functions instead of raster and dismo, which rely on deprecated pkgs sp, rgdal, and rgeos. This includes the multivariate environmental similarity functions originally from rmaxent and the RMM functionality. Thus, in place of dismo::maxent, we now use predicts::MaxEnt, and in place of dismo::bioclim we now use predicts::envelope. As the predict methods for these functions are not currently exported by the predicts pkg, ENMeval has to load predicts when making predictions for maxent.jar and BIOCLIM models.
+o  Fixed the maxent.jar implementation so that it correctly receives extra arguments like
+jacknife=TRUE or responsecurves=TRUE and produces the html and plot output. To use this, you need to set the path in the parameter "other.settings" -- see the new example in ?ENMevaluate.
+o  Added new save and load functions for ENMevaluation objects (saveENMevaluation, loadENMevaluation) that write and read .rds files. This was necessary because the terra pkg use new wrap and unwrap functions to preserve file connections, and these new ENMeval functions do the wrapping and unwrapping automatically.
+o  Brought back the maxnet.predictRaster function and simplified it.
 o  Simplified checkerboard partition functionality to remove numbers from function names (checkerboard1, checkerboard2) and switch from "basic" and "hierarchical" based on parameter inputs. Left the old functions in as well to avoid existing code breaking, but will phase out with next version.
+o  Now you can set addsamplestobackground = FALSE in other.settings for maxnet models.
 o  Removed functionality for deprecated parameters from v1.
 o  Switched to native R pipes instead of magrittr.
 o  Made changes to simplify unit tests.
